--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/tailwindcss": "^6.9.4",
+    "@vee-validate/yup": "^4.11.8",
     "daisyui": "latest",
     "nuxt": "^3.8.0",
     "sass": "^1.69.5",
@@ -26,10 +27,13 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.0.0",
+    "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
+    "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.5.1",
     "@vee-validate/nuxt": "^4.11.8",
     "@vuepic/vue-datepicker": "^7.2.2",
     "date-fns": "^2.30.0",
+    "next-auth": "4.21.1",
     "pinia": "^2.1.7",
     "vue-datepicker": "^1.3.0",
     "yup": "^1.3.2"
