--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:Rn1WpFNkzbqDvJ7zpZ5aL0il5o2QwgBj7eLiXZ8MSKg=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+FRONTEND_URL=http://localhost:3000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -21,7 +22,6 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-SESSION_DOMAIN=localhost
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -58,5 +58,3 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-SANCTUM_STATEFUL_DOMAINS=localhost:3000
