--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "nuxt": "^3.8.0",
     "sass": "^1.69.5",
     "vue": "^3.3.7",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-toastify": "^0.1.14"
   },
   "dependencies": {
     "@nuxt/image": "^1.0.0",
